--- a/app/views/digital_objects/all.html.erb
+++ b/app/views/digital_objects/all.html.erb
@@ -4,55 +4,60 @@
 
 <%# TODO: [1.x] search e filtri per digital_objects %>
 <div class="span12">
-<% if @digital_objects.size > 0 %>
-  <%= display_page_entries_info @digital_objects %>
+  <% if @digital_objects.size > 0 %>
+    <%= display_page_entries_info @digital_objects %>
 
-  <table class="table">
-    <thead>
-      <tr>
-        <th class="span2"><%= t('digital_object') %></th>
-        <th class="span6"><%= sortable("asset_file_name", "Nome file") %></th>
-        <th class="span3"><%= sortable("updated_at", t('updated_at')) %></th>
-        <th class="span1">&nbsp;</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @digital_objects.each do |digital_object| %>
-      <tr class="<%= cycle("odd", "even") %>">
-        <td class="center">
-          <% if digital_object.is_image? %>
-            <% if FileTest.exist?(digital_object.asset.path(:medium)) %>
-              <%= link_to image_tag(digital_object.asset(:thumb)), digital_object.asset(:large), :class => "fancybox", :rel => "gallery" %>
-            <% else %>
-              <%= image_tag "missing-thumb.jpg" %>
-            <% end %>
-          <% else %>
-            <%= image_tag('pdf-thumb.png') %>
-          <% end %>
-        </td>
-        <td><%= digital_object.asset_file_name %>
-        <p><span class="muted">Allegato a:</span>
-        <%= link_to t("activerecord.models.#{digital_object.attachable_type.downcase}.one"), polymorphic_path([digital_object.attachable, "digital_objects"]) %></p></td>
-        <td><%= l digital_object.updated_at, :format => :long %></td>
-        <td><%= link_to t('destroy'), digital_object, :confirm => t('are_you_sure'), :method => :delete %></td>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
+    <table class="table table-sortable">
+      <thead>
+        <tr>
+          <th class="span2">&nbsp;</th>
+          <th class="span6"><%= sortable("asset_file_name", "Nome file") %></th>
+          <th class="span3"><%= sortable("updated_at", t('updated_at')) %></th>
+          <th class="span1">&nbsp;</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @digital_objects.each do |digital_object| %>
+          <tr class="<%= cycle("odd", "even") %>">
+            <td class="center">
+              <% if digital_object.is_image? %>
+                <% if FileTest.exist?(digital_object.asset.path(:medium)) %>
+                  <%= link_to image_tag(digital_object.asset(:thumb)), digital_object.asset(:large), :class => "fancybox" %>
+                <% else %>
+                  <%= image_tag "missing-thumb.jpg" %>
+                <% end %>
+              <% else %>
+                <% if digital_object.is_video? %>
+                  <%= image_tag "mp4-medium.png" %>
+                <% else %>
+                  <%= image_tag "pdf-medium.png" %>
+                <% end %>
+              <% end %>
+            </td>
+            <td><%= digital_object.asset_file_name %>
+              <p><span class="muted">Allegato a:</span>
+                <%= link_to t("activerecord.models.#{digital_object.attachable_type.downcase}.one"), polymorphic_path([digital_object.attachable, "digital_objects"]) %><br>
+                <span class="light"><%= digital_object.attachable.display_name %></span></p></td>
+            <td><%= l digital_object.updated_at, :format => :long %></td>
+            <td><%= link_to t('destroy'), digital_object, :confirm => t('are_you_sure'), :method => :delete %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
-  <%= will_paginate @digital_objects %>
-<% else %>
-  <p>Non sono ancora presenti oggetti digitali.</p>
-  <p><strong>Nota</strong>. Gli oggetti digitali possono essere creati all'interno delle seguenti schede:</p>
-  <ul>
-    <%# TODO: digital_objects per fonds (treeview) %>
-    <li>Complessi archivistici</li>
-    <li>Unità archivistiche</li>
-    <li>Soggetti produttori</li>
-    <li>Soggetti conservatori</li>
-  </ul>
-  <ul>
-    <li>Fonti</li>
-  </ul>
-<% end %>
+    <%= will_paginate @digital_objects %>
+  <% else %>
+    <p>Non sono ancora presenti oggetti digitali.</p>
+    <p><strong>Nota</strong>. Gli oggetti digitali possono essere creati all'interno delle seguenti schede:</p>
+    <ul>
+  <%# TODO: digital_objects per fonds (treeview) %>
+      <li>Complessi archivistici</li>
+      <li>Unità archivistiche</li>
+      <li>Soggetti produttori</li>
+      <li>Soggetti conservatori</li>
+    </ul>
+    <ul>
+      <li>Fonti</li>
+    </ul>
+  <% end %>
 </div>
