--- a/app/views/digital_objects/index.html.erb
+++ b/app/views/digital_objects/index.html.erb
@@ -1,6 +1,8 @@
+<% container_class "container-fluid" %>
+
 <% content_for :status_bar do %>
-  <%# OPTIMIZE: a funzionalità assestata spostare in helper. Dubbio se mettere link in status-bar %>
-  <h2><%= t(@attachable.class.name.underscore.pluralize) %><span class="divider">/</span><%= @attachable.display_name %><span class="divider">/</span><%= status_bar_context %></h2>
+  <%# OPTIMIZE: spostare in helper?? Valutare coerenza di testi e codice con tutto il resto %>
+  <h2><%= [t(@attachable.class.name.underscore.pluralize), truncate(@attachable.display_name, :length => 100), status_bar_context].join(path_separator) %></h2>
   <div id="links">
     <% target_link = @attachable.class.name == "Source" ? edit_polymorphic_path(@attachable) : polymorphic_path(@attachable) %>
     <%= link_to_index "Scheda " + t("activerecord.models.#{@attachable.class.name.underscore}.one").downcase, target_link %>
@@ -9,41 +11,52 @@
 
 <div class="span12">
   <div id="index-controls">
-    <%= link_to "Nuovo oggetto digitale", new_polymorphic_path([@attachable, "digital_object"]), :class => "btn btn-small new", :id => 'new-digital-object' %>
+    <%= link_to t('new_digital_object'), new_polymorphic_path([@attachable, "digital_object"]), :class => "btn btn-small new", :id => 'new-digital-object' %>
+    <div class="pull-right">
+      <button id="bulk-destroy" type="button" class="btn btn-small delete disabled">
+        <i class="icon-trash"></i>
+        <span><%= t('delete_selected_files') %></span>
+      </button>
+      <input id="toggle-all" type="checkbox" class="toggle">
+    </div>
   </div>
 
   <% if @digital_objects.size > 0 %>
     <%= display_page_entries_info @digital_objects %>
 
-    <ul class="thumbnails">
-    <% @digital_objects.each do |digital_object| %>
-      <li class="span3">
-      <div class="thumbnail" style="height: 360px">
-        <% if digital_object.is_image? %>
-          <% if FileTest.exist?(digital_object.asset.path(:medium)) %>
-            <%= image_tag digital_object.asset(:medium) %>
-          <% else %>
-            <%= image_tag "missing-medium.jpg" %>
-          <% end %>
-        <% else %>
-          <%= image_tag "pdf-medium.png" %>
-        <% end %>
-        <div class="caption">
-          <h5><%= digital_object.title.present? ? truncate(digital_object.title, :length => 70) : "" %></h5>
-          <p><%= digital_object.description.present? ? truncate(digital_object.description, :length => 70) : "" %></p>
-          <div class="actions">
-            <% if digital_object.is_image? %>
-              <%= link_to "Ingrandisci", digital_object.asset(:large), :class => "fancybox", :rel => "gallery" %>
-            <% else %>
-              <%= link_to "Scarica", digital_object.asset(:original) %>
-            <% end %> |
-            <%= link_to t('edit'), edit_polymorphic_path([@attachable, digital_object]) %> |
-            <%= link_to t('destroy'), digital_object, :confirm => t('are_you_sure'), :method => :delete %>
+    <ul id="sortable" class="thumbnails">
+      <% @digital_objects.each do |digital_object| %>
+        <li id="list-<%= digital_object.id %>" class="span3">
+          <div class="thumbnail">
+            <div class="img-container">
+              <% if digital_object.is_image? %>
+                <% if FileTest.exist?(digital_object.asset.path(:medium)) %>
+                  <%= image_tag digital_object.asset(:medium) %>
+                <% else %>
+                  <%= image_tag "missing-medium.jpg" %>
+                <% end %>
+              <% else %>
+                <% if digital_object.is_video? %>
+                  <%= image_tag "mp4-medium.png" %>
+                <% else %>
+                  <%= image_tag "pdf-medium.png" %>
+                <% end %>
+              <% end %>
+            </div>
+            <p class="title muted"><%= digital_object.title.present? ? truncate(digital_object.title, :length => 60) : "" %></p>
+            <div class="actions btn-group">
+              <% if digital_object.is_image? %>
+                <%= link_to '<i class="icon-zoom-in"></i>', digital_object.asset(:large), :class => "btn fancybox-gallery", :rel => "gallery", :title => t('zoom_in') %>
+              <% else %>
+                <%= link_to '<i class="icon-download"></i>', digital_object.asset(:original), :class => "btn", :title => t('download') %>
+              <% end %>
+              <%= link_to '<i class="icon-edit"></i>', edit_polymorphic_path([@attachable, digital_object]), :class => "btn", :title => t('edit') %>
+              <%= link_to '<i class="icon-trash"></i>', digital_object, :confirm => t('are_you_sure'), :method => :delete, :class => "btn", :title => t('destroy') %>
+              <%= check_box_tag "digital_object_ids[#{digital_object.id}]", digital_object.id, false, :name => "digital_object_ids[]", :class => "check-digital-object" %>
+            </div>
           </div>
-        </div>
-      </div>
-      </li>
-    <% end %>
+        </li>
+      <% end %>
     </ul>
 
     <%= will_paginate @digital_objects %>
