--- a/app/views/fonds/_new_fond.html.erb
+++ b/app/views/fonds/_new_fond.html.erb
@@ -7,8 +7,8 @@
     <div id="fond_form_error"></div>
 
     <% form_tag({:controller => 'fonds', :action => 'ajax_create'}, {:method => :post, :id => "new-fond-form", :class => "skip-prompt"}) do %>
-      <%= label_tag 'fond[name]', t('name') + required_marker + ' <span class="inline-msg">obbligatorio</span>' %>
-      <%= text_field_tag 'fond[name]', '', :style => "width: 98%" %>
+      <%= label_tag 'fond[name]', t('name') + required_marker + '<span class="inline-msg hide">obbligatorio</span>' %>
+      <%= text_field_tag 'fond[name]', '', :autocomplete => "off", :style => "width: 98%" %>
       <%= hidden_field_tag 'fond[group_id]', current_user.group_id %>
     <% end %>
   </div>
