--- a/app/views/digital_objects/new.html.erb
+++ b/app/views/digital_objects/new.html.erb
@@ -1,5 +1,7 @@
+<% container_class "container-fluid" %>
+
 <% content_for :status_bar do %>
-  <h2><%= t(@attachable.class.name.underscore.pluralize) %><span class="divider">/</span><%= @attachable.display_name %><span class="divider">/</span><%= status_bar_context %></h2>
+  <h2><%= [t(@attachable.class.name.underscore.pluralize), @attachable.display_name, t('new_digital_object')].join(path_separator) %></h2>
   <div id="links">
     <%= link_to_index t('index_digital_objects'), polymorphic_path([@attachable, "digital_objects"]) %>
   </div>
