--- a/app/views/reports/creators.html.erb
+++ b/app/views/reports/creators.html.erb
@@ -1,5 +1,5 @@
 <% content_for :status_bar do %>
-  <h2>Report<%= path_separator %><%= link_to @root_fond_name, dashboard_report_path %><%= path_separator %><%= t('creators') %> </h2>
+  <h2>Report complesso archivistico<%= path_separator %><%= link_to @root_fond_name, dashboard_report_path %><%= path_separator %>Lista <%= t('creators').downcase %> </h2>
   <div id="links">
     <%= link_to_index "Report", reports_path %>
   </div>
@@ -7,7 +7,7 @@
 
 <div class="span12">
   <div id="index-controls">
-    <%= link_to '<i class="icon-download-alt"></i> scarica PDF', creators_report_path(@fond, :format => "pdf"),  {:class => "btn btn-small pdf"}  %>
+    <%= link_to '<i class="icon-download-alt"></i> Genera PDF', creators_report_path(@fond, :format => "pdf"),  {:class => "btn btn-small pdf"}  %>
   </div>
 
   <table class="table">
