--- a/app/views/reports/dashboard.html.erb
+++ b/app/views/reports/dashboard.html.erb
@@ -1,57 +1,48 @@
 <% content_for :status_bar do %>
-  <h2>Report<%= path_separator %><%= @fond.name %></h2>
+  <h2>Report complesso archivistico<%= path_separator %><%= @fond.name %></h2>
   <div id="links">
     <%= link_to_index "Report", reports_path %>
   </div>
 <% end %>
 
-<div class="span6">
+
+<div class="span8">
+  <h2>
+    <%= @fond.name %>
+    <span class="date"><%= @fond.preferred_event.try(:full_display_date) %></span>
+  </h2>
+
+  <!-- <h3>Placeholder</h3> -->
+
+  <table class="table" style="margin-top: 1em">
+    <tbody>
+      <tr>
+        <td><%= link_to 'Inventario', inventory_report_path(@fond)%></td>
+      </tr>
+      <tr>
+        <td><%= link_to_if @units_count > 0, 'Etichette unità', labels_report_path(@fond) %>
+            (<%= number_with_delimiter(@units_count) || "0" %>)
+          </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <!-- <h3>Placeholder</h3> -->
 
   <table class="table">
     <tbody>
       <tr>
-        <td><strong>Inventario</strong></td>
-        <td><%= link_to '<i class="icon-download-alt"></i> RTF', inventory_report_path(@fond, :format => "rtf"),  {:class => "rtf btn btn-small"}  %></td>
-        <td><%= link_to '<i class="icon-download-alt"></i> PDF', inventory_report_path(@fond, :format => "pdf"),  {:class => "btn btn-small"}  %></td>
+        <td><%= link_to 'Struttura complesso archivistico', summary_report_path(@fond) %></td>
       </tr>
-      <% unless @units_count.size.zero? %>
-        <tr>
-          <td><strong>Etichette unità</strong></td>
-          <td>&nbsp;</td>
-          <td><%= link_to '<i class="icon-download-alt"></i> PDF', labels_report_path(@fond, :format => "pdf"),  {:class => "btn btn-small"}  %></td>
-        </tr>
-      <% end %>
       <tr>
-        <td>Struttura complesso archivistico</td>
-        <td><%= link_to '<i class="icon-list-alt"></i> HTML', summary_report_path(@fond), {:class => "btn btn-small"}  %></td>
-        <td><%= link_to '<i class="icon-download-alt"></i> PDF', summary_report_path(@fond, :format => "pdf"),  {:class => "btn btn-small"}  %></td>
+        <td><%= link_to_if @units_count > 0, "Lista unità", units_report_path(@fond) %>
+           (<%= number_with_delimiter(@units_count) || "0" %>)</td>
       </tr>
-      <% unless @units_count.size.zero? %>
-        <tr>
-          <td>Lista unità per segnatura</td>
-          <td><%= link_to '<i class="icon-list-alt"></i> HTML', units_by_reference_number_report_path(@fond), {:class => "btn btn-small"} %></td>
-          <td><%= link_to '<i class="icon-download-alt"></i> PDF', units_by_reference_number_report_path(@fond, :format => "pdf"),  {:class => "btn btn-small pdf"}  %></td>
-        </tr>
-        <tr>
-          <td>Lista unità per sequenza</td>
-          <td><%= link_to '<i class="icon-list-alt"></i> HTML', units_by_sequence_number_report_path(@fond), {:class => "btn btn-small"} %></td>
-          <td><%= link_to '<i class="icon-download-alt"></i> PDF', units_by_sequence_number_report_path(@fond, :format => "pdf"),  {:class => "btn btn-small"} %></td>
-        </tr>
-      <% end %>
-      <% unless @fond.creators.blank? %>
-        <tr>
-          <td>Lista soggetti produttori</td>
-          <td><%= link_to '<i class="icon-list-alt"></i> HTML', creators_report_path(@fond), {:class => "btn btn-small"} %></td>
-          <td><%= link_to '<i class="icon-download-alt"></i> PDF', creators_report_path(@fond, :format => "pdf"),  {:class => "btn btn-small"}  %></td>
-        </tr>
-      <% end %>
-      <% unless @fond.custodians.blank? %>
-        <tr>
-          <td>Lista soggetti conservatori</td>
-          <td><%= link_to '<i class="icon-list-alt"></i> HTML', custodians_report_path(@fond), {:class => "btn btn-small"} %></td>
-          <td><%= link_to '<i class="icon-download-alt"></i> PDF', custodians_report_path(@fond, :format => "pdf"),  {:class => "btn btn-small"}  %></td>
-        </tr>
-      <% end %>
+      <tr>
+        <td><%= link_to_if @fond.creators.present?, "Lista soggetti produttori", creators_report_path(@fond) %>
+          (<%= @fond.creators.size || "0" %>)</td>
+      </tr>
     </tbody>
   </table>
+
 </div>
