--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,29 +1,95 @@
+<%# OPTIMIZE: coerenza breadcrumbs %>
 <% content_for :status_bar do %>
   <h2>Report</h2>
 <% end %>
 
 <div class="span12">
-<% case @fonds.size
-when 0 then %>
-  <p>Non sono presenti schede complesso archivistico. Report non disponibili.</p>
-<% when 2..10 then %>
-  <p>Scegli il complesso archivistico:</p>
-  <table class="table">
-    <tbody>
-    <% @fonds.each do |fond| %>
-      <tr>
-        <td><%= link_to fond.name, dashboard_report_path(fond) %>
-        <%= fond.preferred_event.try(:full_display_date) %>
-          <% if fond.fond_type.present? %>
-             <span class="light">(<%= fond.fond_type %>)</span>
-           <% end %>
-        </td>
-      </tr>
-    <% end %>
-    </tbody>
-  </table>
-<% else %>
-  <%= render :partial => "form" %>
-<% end %>
+  <p style="margin-bottom: 2em;">Puoi produrre report relativi a un singolo complesso archivistico oppure per soggetto conservatore o per progetto.</p>
+  <ul class="nav nav-tabs" id="report-tabs">
+    <li><a href="#fonds" data-toggle="tab"><%=t('fonds')%></a></li>
+    <li><a href="#custodians" data-toggle="tab"><%=t('custodians')%></a></li>
+    <li><a href="#projects" data-toggle="tab"><%=t('projects')%></a></li>
+  </ul>
+
+  <div class="tab-content">
+    <div class="tab-pane" id="fonds">
+      <% case @fonds.size
+      when 0 then %>
+        <p>Non sono presenti schede complesso archivistico. Report non disponibili.</p>
+      <% when 2..100 then %>
+        <p>Scegli il complesso archivistico:</p>
+        <table class="table">
+          <tbody>
+            <% @fonds.each do |fond| %>
+              <tr>
+                <td><%= link_to fond.name, dashboard_report_path(fond) %>
+                  <%= fond.preferred_event.try(:full_display_date) %>
+                  <% if fond.fond_type.present? %>
+                    <span class="light">(<%= fond.fond_type %>)</span>
+                  <% end %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      <% else %>
+        <%= render :partial => "form_fonds" %>
+      <% end %>
+    </div>
+
+    <%# OPTIMIZE: declinare singolare / plurale "complessi archivistici" %>
+    <div class="tab-pane" id="custodians">
+      <% if @custodians.length > 0 %>
+        <% if @custodians.length < 100 %>
+          <p>Scegli il soggetto conservatore:</p>
+          <table class="table">
+            <tbody>
+              <% @custodians.each do |custodian| %>
+                <tr>
+                  <td>
+                    <%= link_to custodian.name, custodian_report_path(custodian), {:class => "export-aef-wait", "target-id".to_sym => custodian.id, "target-class" => 'custodian', "target-mode" => "full"} %><br>
+                    <span class="muted"><%= custodian.num %> <%= Fond.human_name(:count => custodian.num).downcase %></span>
+                  </td>
+                  <td><%= l custodian.updated_at, :format => :long %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        <% else %>
+          <%= render :partial => "form_custodians" %>
+        <% end %>
+      <% else %>
+        <p>Non sono presenti schede soggetto conservatore collegate a complessi archivistici.<br />
+          Report per soggetto conservatore non disponibili.</p>
+      <% end %>
+    </div>
+
+    <%# OPTIMIZE: declinare singolare / plurale "complessi archivistici" %>
+    <div class="tab-pane" id="projects">
+      <% if @projects.length > 0 %>
+        <% if @projects.length < 100 %>
+          <p>Scegli il progetto:</p>
+          <table class="table">
+            <tbody>
+              <% @projects.each do |project| %>
+                <tr>
+                  <td>
+                    <%= link_to project.name, project_report_path(project), {:class => "export-aef-wait", "target-id".to_sym => project.id, "target-class" => 'project', "target-mode" => "full"} %><br>
+                    <span class="muted"><%= project.num %> <%= t('fonds').downcase %></span>
+                  </td>
+                  <td><%= l project.updated_at, :format => :long %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        <% else %>
+          <%= render :partial => "form_projects" %>
+        <% end %>
+      <% else %>
+        <p>Non sono presenti schede progetto collegate a complessi archivistici.<br />
+          Report per progetto non disponibili.</p>
+      <% end %>
+    </div>
+  </div>
 </div>
 
