--- a/app/views/reports/summary.html.erb
+++ b/app/views/reports/summary.html.erb
@@ -1,14 +1,13 @@
 <% content_for :status_bar do %>
-  <h2>Report<%= path_separator %><%= link_to @root_fond_name, dashboard_report_path %><%= path_separator %>Struttura complesso archivistico</h2>
+  <h2>Report complesso archivistico<%= path_separator %><%= link_to @root_fond_name, dashboard_report_path %><%= path_separator %>Struttura complesso archivistico</h2>
   <div id="links">
     <%= link_to_index "Report", reports_path %>
   </div>
 <% end %>
 
-
 <div class="span12">
   <div id="index-controls">
-    <%= link_to '<i class="icon-download-alt"></i> scarica PDF', summary_report_path(@fond, :format => "pdf"),  {:class => "btn btn-small pdf"}  %>
+    <%= link_to '<i class="icon-download-alt"></i> Genera PDF', summary_report_path(@fond, :format => "pdf"),  {:class => "btn btn-small pdf"}  %>
   </div>
   <table class="table">
     <thead>
