--- a/app/views/site/dashboard.html.erb
+++ b/app/views/site/dashboard.html.erb
@@ -8,7 +8,7 @@
 
 <div class="span6">
 <h2 style="font-size: 14px; font-weight: normal;">Schede principali</h2>
-  <table class="summary">
+  <table class="table table-summary">
     <tr>
       <td><%= link_to t('fonds'), fonds_path %>
           (<%= number_with_delimiter(@fonds_count) %>)</td>
@@ -38,7 +38,7 @@
   </table>
 </div>
 
-<div class="span10" style="margin-top: 4em; padding-top: 1em; border-top: 2px solid #eee;">
+<div class="span10" style="margin-top: 3em; padding-top: 1em; border-top: 2px solid #eee;">
   <h2 style="font-size: 14px; font-weight: normal;">
     Benvenuto su <strong><%= "#{APP_NAME} #{APP_VERSION} #{APP_STATUS}" %></strong>
   </h2>
