--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -2,7 +2,6 @@
   <h2><%= status_bar_context %></h2>
 <% end %>
 
-<%# FIXME: troppo stile in linea qui e in creators/index %>
 <%# FIXME: i18n ==> testo di ul.dropdown %>
 <div class="span12">
   <div id="index-controls" class="clearfix">
@@ -13,7 +12,7 @@
       <% end %>
     <% end %>
     <div class="btn-group pull-left">
-      <%= link_to t('new') + '<span class="caret" style="margin-top: 7px; margin-left: 4px"></span>', "#", { :class => "btn btn-small dropdown-toggle new", :'data-toggle' => "dropdown" } %>
+      <%= link_to t('new') + '<span class="caret"></span>', "#", { :class => "btn btn-small dropdown-toggle new", :'data-toggle' => "dropdown" } %>
       <ul class="dropdown-menu">
         <li><%= link_to "Bibliografia", new_source_path(:type => 1) %></li>
         <li><%= link_to "Strumento di corredo", new_source_path(:type => 2) %></li>
@@ -26,7 +25,7 @@
   <% if @sources.size > 0 %>
   <%= display_page_entries_info @sources %>
 
-  <table class="table">
+  <table class="table table-sortable">
     <thead>
     <tr>
       <th class="span2"><%= t('short_title') %></th>
