--- a/app/views/units/new_iccd.html.erb
+++ b/app/views/units/new_iccd.html.erb
@@ -1,15 +1,15 @@
 <% content_for :status_bar do %>
-  <h2><%= t('listing_units') %><%= path_separator %>
-  <% if @fond %>
-    <% @fond.path_items.each do |item| %>
-      <%= link_to item.name, fond_units_path(item.id) %><%= path_separator %>
+  <h2><%= t('listing_units') %>:
+    <% if @fond %>
+      <% @fond.path_items.each do |item| %>
+        <%= link_to item.name, fond_units_path(item.id) %><%= path_separator %>
+      <% end %>
     <% end %>
-  <% end %>
-  Nuova scheda
+    Nuova scheda
   </h2>
   <div id="links">
     <% if @fond %>
-      <%= link_to_index "Lista unità del complesso", fond_units_path(@fond.root.id) %>
+      <%= link_to_index "Lista unità del livello", fond_units_path(@fond.id) %>
     <% end %>
   </div>
 <% end %>
